[package]
name = "natsukashii"
version = "0.1.0"
edition = "2021"
authors = ["Simone Coco"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
imgui = "0.8.2"
imgui-wgpu = "0.20.0"
imgui-winit-support = "0.8.2"
wgpu = "0.13.1"
pollster = "0.2.5"